<resources>
    <string name="app_name">ShoppeDemo</string>
    <string name="title_market">Market</string>
    <string name="title_cart">Cart</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="checkout">Checkout</string>
    <string name="quantity_in_cart">in cart</string>
    
    <!--    checkout form strings-->
    <string name="billing_address">Billing Address</string>
    <string name="payment_details">Payment Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiration">Expiration</string>
    <string name="security_code">Security Code</string>
    <string name="subtotal">Subtotal:</string>
    <string name="purchase">Purchase</string>

    <string-array name="states_array">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
</resources>
