<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.fullstorydev.shoppedemo.ui.checkout.CheckoutViewModel" />
        <variable
            name="handlers"
            type="com.fullstorydev.shoppedemo.ui.checkout.CheckoutEventHandlers"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tv_checkout_billing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_space"
                android:text="@string/billing_address"
                android:fontFamily="sans-serif-black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/checkout_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.customerInfo.firstName}"
                        android:onTextChanged="@{(s,start,before,count)->viewmodel.setFirstName(s)}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/checkout_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.customerInfo.lastName}"
                        android:onTextChanged="@{(s,start,before,count)->viewmodel.setLastName(s)}" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/checkout_address_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.customerInfo.address1}"
                    android:onTextChanged="@{(s,start,before,count)->viewmodel.setAddress1(s)}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/checkout_address_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewmodel.customerInfo.address2}"
                    android:onTextChanged="@{(s,start,before,count)->viewmodel.setAddress2(s)}" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/checkout_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:hint="@string/city"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_checkout_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewmodel.customerInfo.city}"
                        android:onTextChanged="@{(s,start,before,count)->viewmodel.setCity(s)}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/checkout_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:hint="@string/state"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        app:selectedValue="@{viewmodel.customerInfo.state}"
                        android:onItemSelected="@{(parent,view,position,id)->viewmodel.setState(position)}"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_checkout_zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/zip_code"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@{viewmodel.customerInfo.zip}"
                        android:onTextChanged="@{(s,start,before,count)->viewmodel.setZip(s)}" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_space"
                android:text="@string/payment_details"
                android:fontFamily="sans-serif-black" />
            <TextView
                android:id="@+id/tv_checkout_credit_cart_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit_card_number"
                android:labelFor="@id/et_checkout_cart_number" />
            <EditText
                android:id="@+id/et_checkout_cart_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="@{viewmodel.customerInfo.creditCardNumber}"
                android:onTextChanged="@{(s,start,before,count)->viewmodel.setCreditCardNumber(s)}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_checkout_expiration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/spinner_checkout_month"
                    android:text="@string/expiration" />
                <Spinner
                    android:id="@+id/spinner_checkout_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:selectedValue="@{viewmodel.customerInfo.expirationMonth}"
                    android:onItemSelected="@{(parent,view,position,id)->viewmodel.setExpirationMonth(position)}" />
                <Spinner
                    android:id="@+id/spinner_checkout_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:selectedValue="@{viewmodel.customerInfo.expirationYear}"
                    android:onItemSelected="@{(parent,view,position,id)->viewmodel.setExpirationYear(position)}" />
                <TextView
                    android:id="@+id/tv_checkout_security_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security_code"/>
                <EditText
                    android:id="@+id/et_checkout_security_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@{viewmodel.customerInfo.securityCode}"
                    android:onTextChanged="@{(s,start,before,count)->viewmodel.setSecurityCode(s)}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal" />
                <TextView
                    android:id="@+id/tv_checkout_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{'$'+String.valueOf(viewmodel.subtotal)}"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_checkout_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchase"
                android:onClick="@{()->handlers.onClickPurchase(viewmodel.customerInfo,viewmodel.subtotal)}" />
        </LinearLayout>
    </ScrollView>
</layout>
